SkyXplore - Move data directly under game - New game generation system